PBEXENGDQA-4614 fix issues sonarcube